validated the html, lots of trailing tags

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p><i>from sequence to structure</i></p>
             <p>
                The <a href="http://major.iric.ca/Web/MC-Tools">MC-Fold and MC-Sym pipeline</a>
-               is a widely recognized and used tool for RNA structure prediction.</p>
+               is a widely recognized and used tool for RNA structure prediction.
             </p>
           </div>
         </div>
@@ -103,7 +103,7 @@
             <p>
                <a href="http://major.iric.ca/Web/miRBook">mirBook</a>
                predicts cell-specific microRNA targeting based on
-               a stable matching of genes and microRNAs.</p>
+               a stable matching of genes and microRNAs.
             </p>
           </div>
         </div>
@@ -117,7 +117,6 @@
             <p><i>two birds with one stone</i></p>
             <p>Using mirBook, new methods of microRNA multi-gene 
                targeting are currently under development.
-               </p>
             </p>
           </div>
         </div>
@@ -134,10 +133,10 @@
     <h2 class="text-center top-space">Funding</h2>
     <br>
     <div class="row">
-      <div class="col-md-3"> <img class="center-block" src="assets/images/nih.jpg"/> </div>
-      <div class="col-md-3"> <img class="center-block" src="assets/images/cihr-eng.jpg"/> </div>
-      <div class="col-md-3"> <img class="center-block" src="assets/images/hfsp.jpg"/> </div>
-      <div class="col-md-3"> <img class="center-block" src="assets/images/cfi-eng.png"/> </div>
+      <div class="col-md-3"> <img alt="NIH logo" class="center-block" src="assets/images/nih.jpg"/> </div>
+      <div class="col-md-3"> <img alt="CIHR logo" class="center-block" src="assets/images/cihr-eng.jpg"/> </div>
+      <div class="col-md-3"> <img alt="HFSP logo" class="center-block" src="assets/images/hfsp.jpg"/> </div>
+      <div class="col-md-3"> <img alt="CFI logo" class="center-block" src="assets/images/cfi-eng.png"/> </div>
     </div> <!-- /row -->
 
 
@@ -189,7 +188,7 @@
             <div class="widget-body">
               <p class="text-right">
                 Copyright &copy; 2015, Gabriel Parent. Designed by 
-                <a href="http://gettemplate.com/" rel="designer">gettemplate</a> 
+                <a href="http://gettemplate.com/">gettemplate</a> 
               </p>
             </div>
           </div>
