added missing alt text

--- a/index.html
+++ b/index.html
@@ -134,10 +134,10 @@
     <h2 class="text-center top-space">Funding</h2>
     <br>
     <div class="row">
-      <div class="col-md-3"> <img class="center-block" src="assets/images/nih.jpg"/> </div>
-      <div class="col-md-3"> <img class="center-block" src="assets/images/cihr-eng.jpg"/> </div>
-      <div class="col-md-3"> <img class="center-block" src="assets/images/hfsp.jpg"/> </div>
-      <div class="col-md-3"> <img class="center-block" src="assets/images/cfi-eng.png"/> </div>
+      <div class="col-md-3"> <img class="center-block" src="assets/images/nih.jpg" alt="nih logo"/> </div>
+      <div class="col-md-3"> <img class="center-block" src="assets/images/cihr-eng.jpg" alt="cihr logo"/> </div>
+      <div class="col-md-3"> <img class="center-block" src="assets/images/hfsp.jpg" alt="hfsp logo"/> </div>
+      <div class="col-md-3"> <img class="center-block" src="assets/images/cfi-eng.png" alt="cfi logo"/> </div>
     </div> <!-- /row -->
 
 
