--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 </head>
 
 <body class="home">
-  <!-- Fixed navbar -->
+
   <div class="navbar navbar-inverse navbar-fixed-top headroom" >
     <div class="container">
       <div class="navbar-header">
-        <!-- Button for smallest screens -->
+
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-bar"> </span>
           <span class="icon-bar"> </span>
@@ -37,7 +37,7 @@
         </button>
       </div>
 
-      <!-- the navbar itself -->
+
       <nav class="navbar-collapse collapse">
         <ul class="nav navbar-nav pull-right">
           <li><a href="#">Home</a></li>
@@ -45,12 +45,11 @@
           <li><a href="#research">Research</a></li>
           <li><a href="#funding">Funding</a></li>
         </ul>
-      </nav><!--/.nav-collapse -->
+      </nav>
     </div>
-  </div> 
-  <!-- /.navbar -->
+  </div>
 
-  <!-- Header -->
+
   <header id="head">
     <div class="container">
       <div class="row">
@@ -59,22 +58,20 @@
       </div>
     </div>
   </header>
-  <!-- /Header -->
 
-  <!-- Intro -->
+
   <div class="container text-center" id="about">
     <br> <br>
     <h2 class="thin">We Believe RNA Is Key To Understanding Biology</h2>
-        <p class="text-muted"> Our current inquiries revolve around three main themes: structure, regulation and artificial design.<br>
-          We are part of the <a href="http://www.iric.ca/"> Institute for Research in Immunology and Cancer </a>
+    <p class="text-muted"> Our current inquiries revolve around three main themes: structure, regulation and artificial design.<br>
+      We are part of the <a href="http://www.iric.ca/"> Institute for Research in Immunology and Cancer </a>
       and the
       <a href="http://www.iro.umontreal.ca/">Computer Science Department </a>
       of Université de Montréal.
     </p>
   </div>
-  <!-- /Intro-->
 
-  <!-- Highlights - jumbotron -->
+
   <div class="jumbotron top-space">
     <div class="container" id="research">
 
@@ -88,8 +85,8 @@
           <div class="h-body text-center">
             <p><i>from sequence to structure</i></p>
             <p>
-               The <a href="http://major.iric.ca/Web/MC-Tools">MC-Fold and MC-Sym pipeline</a>
-               is a widely recognized and used tool for RNA structure prediction.</p>
+              The <a href="http://major.iric.ca/Web/MC-Tools">MC-Fold and MC-Sym pipeline</a>
+              is a widely recognized and used tool for RNA structure prediction.</p>
             </p>
           </div>
         </div>
@@ -100,35 +97,31 @@
           </div>
           <div class="h-body text-center">
             <p><i>a cell-specific understanding</i>
-            <p>
-               <a href="http://major.iric.ca/Web/miRBook">mirBook</a>
-               predicts cell-specific microRNA targeting based on
-               a stable matching of genes and microRNAs.</p>
+              <p>
+                <a href="http://major.iric.ca/Web/miRBook">mirBook</a>
+                predicts cell-specific microRNA targeting based on
+                a stable matching of genes and microRNAs.</p>
+              </p>
+            </div>
+          </div>
+
+
+          <div class="col-md-4 col-sm-6 highlight">
+            <div class="h-caption">
+              <h4>microRNA Targeting</h4>
+            </div>
+            <div class="h-body text-center">
+              <p><i>two birds with one stone</i></p>
+              <p>Using mirBook, new methods of microRNA multi-gene
+                targeting are currently under development.
+              </p>
             </p>
           </div>
         </div>
-
-
-        <div class="col-md-4 col-sm-6 highlight">
-          <div class="h-caption">
-            <h4>microRNA Targeting</h4>
-          </div>
-          <div class="h-body text-center">
-            <p><i>two birds with one stone</i></p>
-            <p>Using mirBook, new methods of microRNA multi-gene 
-               targeting are currently under development.
-               </p>
-            </p>
-          </div>
-        </div>
-
-      </div> <!-- /row  -->
-    
+      </div>
     </div>
   </div>
-  <!-- /Highlights -->
 
-  <!-- container -->
   <div class="container" id="funding">
 
     <h2 class="text-center top-space">Funding</h2>
@@ -138,12 +131,9 @@
       <div class="col-md-3"> <img class="center-block" src="assets/images/cihr-eng.jpg" alt="cihr logo"/> </div>
       <div class="col-md-3"> <img class="center-block" src="assets/images/hfsp.jpg" alt="hfsp logo"/> </div>
       <div class="col-md-3"> <img class="center-block" src="assets/images/cfi-eng.png" alt="cfi logo"/> </div>
-    </div> <!-- /row -->
+    </div>
+  </div>
 
-
-
-</div>  <!-- /container -->
-  
 
 
 
@@ -151,20 +141,20 @@
 
     <div class="footer1">
       <div class="container">
-          <div class="col-md-6 widget">
-            <h3 class="widget-title">Contact</h3>
-            <div class="widget-body">
-              <p>Dr. Francois Major</p>
-              <p>
-                <a href="mailto:#">francois.major@umontreal.ca</a>
-                <br>
-                <br>
-                PO Box 6128, Downtown Station<br>
-                Montréal, Québec<br>
-                Canada H3C 3J7
-              </p>
-            </div>
+        <div class="col-md-4 col-md-offset-4 widget">
+          <h3 class="widget-title text-center">Contact</h3>
+          <div class="widget-body text-center">
+            <p>Dr. Francois Major</p>
+            <p>
+              <a href="mailto:#">francois.major@umontreal.ca</a>
+              <br>
+              <br>
+              PO Box 6128, Downtown Station<br>
+              Montréal, Québec<br>
+              Canada H3C 3J7
+            </p>
           </div>
+        </div>
 
       </div>
     </div>
@@ -188,8 +178,8 @@
           <div class="col-md-6 widget">
             <div class="widget-body">
               <p class="text-right">
-                Copyright &copy; 2015, Gabriel Parent. Designed by 
-                <a href="http://gettemplate.com/" rel="designer">gettemplate</a> 
+                Copyright &copy; 2015, Gabriel Parent. Designed by
+                <a href="http://gettemplate.com/" rel="designer">gettemplate</a>
               </p>
             </div>
           </div>
