--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </ul>
       </nav><!--/.nav-collapse -->
     </div>
-  </div> 
+  </div>
   <!-- /.navbar -->
 
   <!-- Header -->
@@ -115,14 +115,14 @@
           </div>
           <div class="h-body text-center">
             <p><i>two birds with one stone</i></p>
-            <p>Using mirBook, new methods of microRNA multi-gene 
+            <p>Using mirBook, new methods of microRNA multi-gene
                targeting are currently under development.
             </p>
           </div>
         </div>
 
       </div> <!-- /row  -->
-    
+
     </div>
   </div>
   <!-- /Highlights -->
@@ -142,7 +142,7 @@
 
 
 </div>  <!-- /container -->
-  
+
 
 
 
@@ -150,9 +150,9 @@
 
     <div class="footer1">
       <div class="container">
-          <div class="col-md-6 widget">
-            <h3 class="widget-title">Contact</h3>
-            <div class="widget-body">
+          <div class="col-md-4 col-md-offset-4 widget">
+            <h3 class="widget-title text-center">Contact</h3>
+            <div class="widget-body text-center">
               <p>Dr. Francois Major</p>
               <p>
                 <a href="mailto:#">francois.major@umontreal.ca</a>
@@ -187,8 +187,8 @@
           <div class="col-md-6 widget">
             <div class="widget-body">
               <p class="text-right">
-                Copyright &copy; 2015, Gabriel Parent. Designed by 
-                <a href="http://gettemplate.com/">gettemplate</a> 
+                Copyright &copy; 2015, Gabriel Parent. Designed by
+                <a href="http://gettemplate.com/">gettemplate</a>
               </p>
             </div>
           </div>
