minor accessibility changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="navbar-header">
 
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <button type="button" alt="Navbar fold" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
           <span class="icon-bar"> </span>
           <span class="icon-bar"> </span>
           <span class="icon-bar"> </span>
@@ -80,7 +80,7 @@
 
         <div class="col-md-4 col-sm-6 highlight">
           <div class="h-caption">
-            <h4>RNA Structure</h4>
+            <h3>RNA Structure</h3>
           </div>
           <div class="h-body text-center">
             <p><i>from sequence to structure</i></p>
@@ -93,7 +93,7 @@
 
         <div class="col-md-4 col-sm-6 highlight">
           <div class="h-caption">
-            <h4>microRNA Regulation</h4>
+            <h3>microRNA Regulation</h3>
           </div>
           <div class="h-body text-center">
             <p><i>a cell-specific understanding</i>
@@ -108,7 +108,7 @@
 
           <div class="col-md-4 col-sm-6 highlight">
             <div class="h-caption">
-              <h4>microRNA Targeting</h4>
+              <h3>microRNA Targeting</h3>
             </div>
             <div class="h-body text-center">
               <p><i>two birds with one stone</i></p>
